25/04/2025
>odebrane nadbytecne komentare
>upraveny ascii art (MB1, blessed)
>upravena krcma
>zmenen text v kostele
>pridan changelog (moje-hra/changelog)
>output smazan a hra.exe je ted primo ve hlavni slozce (moje-hra/hra.exe)
>pridan backstory (tri nahodne vylepseni statu)
>kostlivec je nahrazen upirem ktery ziska zivoty pri kazdem zabiti
>opraven ctime, nahodne hodnoty

26/04/2025
>upir nemuze nadale do kostela
>byl pridan jetset sound effect ktery pozdeji vyuziju (moje-hra/resources/jetset.wav)

27/04/2025
>changelog upraven pro citelnost
>do resources byla pridana slozka extras ktera obsahuje ruzne verze ikony (moje-hra/resources/extras)
>pridan zastupce ktery ma ikonu, hra byla pojmenovana CrownOfHornsRPG [subject to change]
>buff ruznych nepratel

28/04/2025
>pridan VINES a UNDERDARK [subject to change]

01/05/2025
>pridan header (moje-hra/resources/barvy.h)
>do extras byl pridan jetset.wav pac ho dlouho nevyuziju (moje-hra/resources/extras/jetset.wav)
>konecne opravene ze kod potreboval "libgcc_s_dw2-1.dll" ted jsem knihovnu pridal takze by mel kod jit na windows.
>dnes zacinam pracovat na podpore linux a pozdeji i barvy

04/05/2025
>pridane headery do moje-hra/resources, specificky character.h, utility.h, backstory.h.
>odebrane funkce ktere jsou ted v headerech.

11/05/2025
>do underdarku byl pridan drow a 3 pavouci
>do vines byl pridan kenku a 3 brouci
>opravena zavorka v menu

13/05/2025
>cela funkce fight ma ted header a cpp soubor v moje-hra/resources, specificky fight.h a fight.cpp
>pridany 2 dalsi backstory a upravene formatovani v backstory
>funkce vesnice a addxp jsou ted v headeru utility.h
>odebrana sanity, planoval jsem vyuzit ale nakonec by to bylo celkem zbytecne
>pridane charisma, planuju pridat slevy, extra charisma treba v krcme a nebo pouziti charisma na nepratelich

14/05/2025
>zmeny ohledne boje, ted maji bossove první utok a pak az hrac
>zmeny ohledne clearscreen